--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       </div><!--container-->
     </header>
 
-    <section id="band-photos">
+    <section id="band-photo">
       <div class="container">
       </div><!--container-->
     </section>
